Complete deployement phase 1

--- a/notebooks/CustomerChurn.ipynb
+++ b/notebooks/CustomerChurn.ipynb
@@ -1376,96 +1376,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Failed to detect the name of this notebook, you can set it manually with the WANDB_NOTEBOOK_NAME environment variable to enable code saving.\n",
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mjorgeabrego\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "Tracking run with wandb version 0.15.8"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Run data is saved locally in <code>c:\\Users\\Vlady\\Notebooks\\DTC\\mlops-project\\notebooks\\wandb\\run-20230819_005054-ban1wq3e</code>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/jorgeabrego/Customer%20Churn/runs/ban1wq3e' target=\"_blank\">tough-blaze-2</a></strong> to <a href='https://wandb.ai/jorgeabrego/Customer%20Churn' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View project at <a href='https://wandb.ai/jorgeabrego/Customer%20Churn' target=\"_blank\">https://wandb.ai/jorgeabrego/Customer%20Churn</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View run at <a href='https://wandb.ai/jorgeabrego/Customer%20Churn/runs/ban1wq3e' target=\"_blank\">https://wandb.ai/jorgeabrego/Customer%20Churn/runs/ban1wq3e</a>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<button onClick=\"this.nextSibling.style.display='block';this.style.display='none';\">Display W&B run</button><iframe src='https://wandb.ai/jorgeabrego/Customer%20Churn/runs/ban1wq3e?jupyter=true' style='border:none;width:100%;height:420px;display:none;'></iframe>"
-      ],
-      "text/plain": [
-       "<wandb.sdk.wandb_run.Run at 0x23dc53fa290>"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "import wandb\n",
-    "\n",
-    "wandb.init(project=\"Customer Churn\")"
+    "### Training Models"
    ]
   },
   {
@@ -1474,33 +1388,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.naive_bayes import GaussianNB\n",
-    "from sklearn.metrics import accuracy_score\n",
+    "import mlflow\n",
+    "import os\n",
     "\n",
-    "models = {\n",
-    "    \"Logistic Regression\": LogisticRegression(random_state=42, max_iter=1000),\n",
-    "    \"SVM\": SVC(kernel='linear', random_state=42),\n",
-    "    \"Decision Tree\": DecisionTreeClassifier(random_state=42),\n",
-    "    #\"KNN\": KNeighborsClassifier(),\n",
-    "    \"Naive Bayes\": GaussianNB()\n",
-    "}\n",
+    "os.environ[\"AWS_PROFILE\"] = \"jvaa-of\" # fill in with your AWS profile. More info: https://docs.aws.amazon.com/sdk-for-java/latest/developer-guide/setup.html#setup-credentials\n",
     "\n",
-    "for name, model in models.items():\n",
-    "    if name in [\"Logistic Regression\", \"SVM\", \"KNN\"]:  # Modelos que requieren características escaladas\n",
-    "        model.fit(X_train, y_train)\n",
-    "        y_pred = model.predict(X_test)\n",
-    "    else:\n",
-    "        model.fit(X_train, y_train)\n",
-    "        y_pred = model.predict(X_test)\n",
-    "    \n",
-    "    accuracy = accuracy_score(y_test, y_pred)\n",
-    "\n",
-    "    # Registrar métricas en W&B\n",
-    "    wandb.log({\"Model\": name, \"Accuracy\": accuracy})"
+    "TRACKING_SERVER_HOST = \"ec2-44-201-196-116.compute-1.amazonaws.com\" # fill in with the public DNS of the EC2 instance\n",
+    "mlflow.set_tracking_uri(f\"http://{TRACKING_SERVER_HOST}:5000\")"
    ]
   },
   {
@@ -1509,61 +1403,121 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "Waiting for W&B process to finish... <strong style=\"color:green\">(success).</strong>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       "    table.wandb td:nth-child(1) { padding: 0 10px; text-align: left ; width: auto;} td:nth-child(2) {text-align: left ; width: 100%}\n",
-       "    .wandb-row { display: flex; flex-direction: row; flex-wrap: wrap; justify-content: flex-start; width: 100% }\n",
-       "    .wandb-col { display: flex; flex-direction: column; flex-basis: 100%; flex: 1; padding: 10px; }\n",
-       "    </style>\n",
-       "<div class=\"wandb-row\"><div class=\"wandb-col\"><h3>Run history:</h3><br/><table class=\"wandb\"><tr><td>Accuracy</td><td>██▅▁</td></tr></table><br/></div><div class=\"wandb-col\"><h3>Run summary:</h3><br/><table class=\"wandb\"><tr><td>Accuracy</td><td>0.66257</td></tr><tr><td>Model</td><td>Naive Bayes</td></tr></table><br/></div></div>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       " View run <strong style=\"color:#cdcd00\">tough-blaze-2</strong> at: <a href='https://wandb.ai/jorgeabrego/Customer%20Churn/runs/ban1wq3e' target=\"_blank\">https://wandb.ai/jorgeabrego/Customer%20Churn/runs/ban1wq3e</a><br/>Synced 5 W&B file(s), 0 media file(s), 0 artifact file(s) and 0 other file(s)"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Find logs at: <code>.\\wandb\\run-20230819_005054-ban1wq3e\\logs</code>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tracking URI: 'http://ec2-44-201-196-116.compute-1.amazonaws.com:5000'\n"
+     ]
     }
    ],
    "source": [
-    "wandb.finish()"
+    "print(f\"tracking URI: '{mlflow.get_tracking_uri()}'\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.tree import DecisionTreeClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Experiment: artifact_location='s3://vld-test-mlflow/3', creation_time=1692238965828, experiment_id='3', last_update_time=1692238965828, lifecycle_stage='active', name='Telco Churn Model Selection', tags={}>"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mlflow.set_experiment(\"Telco Churn Model Selection\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Saving Dataset\n",
+    "mlflow.log_artifact(\"../data/WA_Fn-UseC_-Telco-Customer-Churn.csv\", artifact_path=\"dataset\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Train and log models\n",
+    "models = [\n",
+    "    (GaussianNB(), \"Naive Bayes\"),\n",
+    "    (LogisticRegression(random_state=42, max_iter=1000), \"Logistic Regression\"),\n",
+    "    (SVC(kernel='linear', random_state=42), \"Support Vector Machine\"),\n",
+    "    (DecisionTreeClassifier(random_state=42), \"Decision Tree\")\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Anaconda3\\envs\\mlops-prj\\lib\\site-packages\\_distutils_hack\\__init__.py:18: UserWarning: Distutils was imported before Setuptools, but importing Setuptools also replaces the `distutils` module in `sys.modules`. This may lead to undesirable behaviors or errors. To avoid these issues, avoid using distutils directly, ensure that setuptools is installed in the traditional way (e.g. not an editable install), and/or make sure that setuptools is always imported before distutils.\n",
+      "  warnings.warn(\n",
+      "c:\\Anaconda3\\envs\\mlops-prj\\lib\\site-packages\\_distutils_hack\\__init__.py:33: UserWarning: Setuptools is replacing distutils.\n",
+      "  warnings.warn(\"Setuptools is replacing distutils.\")\n",
+      "c:\\Anaconda3\\envs\\mlops-prj\\lib\\site-packages\\_distutils_hack\\__init__.py:18: UserWarning: Distutils was imported before Setuptools, but importing Setuptools also replaces the `distutils` module in `sys.modules`. This may lead to undesirable behaviors or errors. To avoid these issues, avoid using distutils directly, ensure that setuptools is installed in the traditional way (e.g. not an editable install), and/or make sure that setuptools is always imported before distutils.\n",
+      "  warnings.warn(\n",
+      "c:\\Anaconda3\\envs\\mlops-prj\\lib\\site-packages\\_distutils_hack\\__init__.py:33: UserWarning: Setuptools is replacing distutils.\n",
+      "  warnings.warn(\"Setuptools is replacing distutils.\")\n",
+      "c:\\Anaconda3\\envs\\mlops-prj\\lib\\site-packages\\_distutils_hack\\__init__.py:18: UserWarning: Distutils was imported before Setuptools, but importing Setuptools also replaces the `distutils` module in `sys.modules`. This may lead to undesirable behaviors or errors. To avoid these issues, avoid using distutils directly, ensure that setuptools is installed in the traditional way (e.g. not an editable install), and/or make sure that setuptools is always imported before distutils.\n",
+      "  warnings.warn(\n",
+      "c:\\Anaconda3\\envs\\mlops-prj\\lib\\site-packages\\_distutils_hack\\__init__.py:33: UserWarning: Setuptools is replacing distutils.\n",
+      "  warnings.warn(\"Setuptools is replacing distutils.\")\n",
+      "c:\\Anaconda3\\envs\\mlops-prj\\lib\\site-packages\\_distutils_hack\\__init__.py:18: UserWarning: Distutils was imported before Setuptools, but importing Setuptools also replaces the `distutils` module in `sys.modules`. This may lead to undesirable behaviors or errors. To avoid these issues, avoid using distutils directly, ensure that setuptools is installed in the traditional way (e.g. not an editable install), and/or make sure that setuptools is always imported before distutils.\n",
+      "  warnings.warn(\n",
+      "c:\\Anaconda3\\envs\\mlops-prj\\lib\\site-packages\\_distutils_hack\\__init__.py:33: UserWarning: Setuptools is replacing distutils.\n",
+      "  warnings.warn(\"Setuptools is replacing distutils.\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "def log_mlflow(model, model_name):\n",
+    "    model.fit(X_train, y_train)\n",
+    "    predictions = model.predict(X_test)\n",
+    "    with mlflow.start_run(nested=True):\n",
+    "        mlflow.log_param(\"Model\", model_name)\n",
+    "        mlflow.log_metric(\"Accuracy\", accuracy_score(y_test, predictions))\n",
+    "        mlflow.log_metric(\"Precision\", precision_score(y_test, predictions))\n",
+    "        mlflow.log_metric(\"Recall\", recall_score(y_test, predictions))\n",
+    "        mlflow.log_metric(\"F1-score\", f1_score(y_test, predictions))\n",
+    "        mlflow.log_metric(\"AUC-ROC\", roc_auc_score(y_test, predictions))\n",
+    "        mlflow.sklearn.log_model(model, artifact_path=f\"model/{model_name}\")\n",
+    "\n",
+    "for model, model_name in models:\n",
+    "    log_mlflow(model, model_name)\n",
+    "\n",
+    "mlflow.end_run()"
    ]
   },
   {
